# vidgrok

./: .clang-format  .gitignore  Dockerfile  README.md  build.sh  build_in_container.sh  meson.build
data/acorn_electron_with_lm1881/: acorn_electron_vsync_0_hsync_1_red_2_green_3_blue4_12mhz_20m_samples.sr
data/amstrad_cpc_464_with_lm1881/: amstrad_cpc_464_vsync_0_hsync_1_red_2_green_3_blue4_12mhz_20m_samples.sr
data/atari_1040stf/: atari_1040stf_vsync_0_hsync_1_red_2_green_3_blue4_12mhz_10m_samples.sr
data/robotron_z1013/: z1013_vsync_0_hsync_1_data_2_12mhz_50m_samples.sr
doc/: vidgrok.1
src/: App.cpp  App.h  DataDispatcher.cpp  DataDispatcher.h  DataRetriever.cpp  DataRetriever.h  DataSource.cpp  DataSource.h  DataVisualizer.cpp  DataVisualizer.h  HardwareDataSource.cpp  HardwareDataSource.h  OptionProcessing.cpp  OptionProcessing.h  RecordedSessionDataSource.cpp  RecordedSessionDataSource.h  SdlWrapper.cpp  SdlWrapper.h  main.cpp
